objects/EUR_CRM_Activation__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activation_Type__c</fullName>
        <label>Activation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Education_Type__c</fullName>
        <label>Brand Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Consumers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Datetime__c</fullName>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_People__c</fullName>
        <label>Number of People</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Datetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Activation_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Activation_Category__c</fullName>
        <label>Activation Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Cost__c</fullName>
        <formula>EUR_JB_Promotion__r.EUR_JB_Unit_Price__c</formula>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_Gifts__c</fullName>
        <label>Evaluation Gifts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_Mechanics__c</fullName>
        <label>Evaluation Mechanics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_Memo_Overall__c</fullName>
        <label>Evaluation Memo Overall</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_Memo__c</fullName>
        <label>Evaluation Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_Overall__c</fullName>
        <label>Evaluation Overall</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Evaluation_POSM__c</fullName>
        <label>Evaluation POSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Promo_Action_Stage__c</fullName>
        <label>Promo Action Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>EUR_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Purchase_Before_Activation__c</fullName>
        <label>Purchase Before Activation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Sold_During_Activation__c</fullName>
        <label>Sold During Activation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Evaluation_Date__c</fullName>
        <label>Store Check Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Evaluation_Notes__c</fullName>
        <label>Store Check Evaluation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Check Visit</label>
        <referenceTo>EUR_CRM_JB_Store_Check_Visit__c</referenceTo>
        <relationshipLabel>Activations</relationshipLabel>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activation (EU)</label>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>Activation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activations (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_GB_Brand_Education</fullName>
        <active>true</active>
        <label>GB Brand Education</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>